Infrastructure/K8s/apigateway-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway-depl
spec:
  selector:
    matchLabels:
      app: apigateway
  template:
    metadata:
      labels:
        app: apigateway
    spec:
      containers:
      - name: coffeesystem-apigateway
        image: letrananhvu/coffeesystem.apigateway:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apigateway-srv
spec:
  type: ClusterIP
  selector:
    app: apigateway
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: apigateway-np-srv
spec:
  type: NodePort
  selector:
    app: apigateway
  ports:
  - port: 80
    targetPort: 80
