Infrastructure/K8s/authservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice-depl
spec:
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: coffeesystem-authservice
        image: letrananhvu/coffeesystem.authservice:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv
spec:
  type: ClusterIP
  selector:
    app: authservice
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: auth-np-srv
spec:
  type: NodePort
  selector:
    app: authservice
  ports:
  - port: 80
    targetPort: 80
