Infrastructure/K8s/employeeapp-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employeeapp-depl
spec:
  selector:
    matchLabels:
      app: employeeapp
  template:
    metadata:
      labels:
        app: employeeapp
    spec:
      containers:
      - name: systemcoffee-employeeapp
        image: letrananhvu/coffeesystem.employeeapp:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: employeeapp-srv
spec:
  selector:
    app: employeeapp
  ports:
  - port: 80
    targetPort: 80
