Infrastructure/K8s/orderservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderservice-depl
spec:
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
      - name: coffeesystem-orderservice
        image: letrananhvu/coffeesystem.orderservice:latest
        ports:
        - containerPort: 80
      
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
  - port: 80
    targetPort: 80
    
---
apiVersion: v1
kind: Service
metadata:
  name: order-np-srv
spec:
  type: NodePort
  selector:
    app: orderservice
  ports:
  - port: 80
    targetPort: 80
