Infrastructure/K8s/orderservicedb-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orderdb-depl
spec:
  selector:
    matchLabels:
      app: orderdb
  template:
    metadata:
      labels:
        app: orderdb
    spec:
      containers:
        - name: orderdb-mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
          - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: orderservicedb-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: orderdb-srv
spec:
  type: ClusterIP
  selector:
    app: orderdb
  ports:
    - name: orderdb
      protocol: TCP
      port: 1433
      targetPort: 1433

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: orderdb-loadbalancer
# spec:
#   type: LoadBalancer
#   selector:
#     app: orderdb
#   ports:
#     - protocol: TCP
#       port: 1433
#       targetPort: 1433
