Infrastructure/K8s/signalrservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signalrservice-depl
spec:
  selector:
    matchLabels:
      app: signalrservice
  template:
    metadata:
      labels:
        app: signalrservice
    spec:
      containers:
      - name: coffeesystem-signalrservice
        image: letrananhvu/coffeesystem.signalrservice:latest
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        ports:
        - containerPort: 80
  
---
apiVersion: v1
kind: Service
metadata:
  name: signalr-srv
spec:
  type: ClusterIP
  selector:
    app: signalrservice
  ports:
  - port: 80
    targetPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: signalr-np-srv
spec:
  type: NodePort
  selector:
    app: signalrservice
  ports:
  - port: 80
    targetPort: 80
